--- a/style.css
+++ b/style.css
@@ -568,7 +568,8 @@ li{
 .card img{
     border-radius: 20px;
     width: 100%;
-    height: 100%;
+    height: 200px;
+    object-fit: cover;
     display: block;
     margin: 10px auto;
     padding: 0px;
