--- a/style.css
+++ b/style.css
@@ -624,3 +624,9 @@ li{
     margin: 10px auto;
     padding: 0px;
 }
+
+span{
+    color: var(--primary-2);
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
+}
