--- a/style.css
+++ b/style.css
@@ -626,7 +626,7 @@ li{
 }
 
 span{
-    color: var(--primary-2);
+    color: orange;
     font-weight: bolder;
     font-family: Arial, Helvetica, sans-serif;
 }
